--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,14 @@ license = "MIT"
 [dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk"
 
+[dependencies.glib]
+git = "https://github.com/gtk-rs/glib"
+
 [dependencies.gtk-sys]
+git = "https://github.com/gtk-rs/sys"
+
+[dependencies.glib-sys]
+git = "https://github.com/gtk-rs/sys"
+
+[dependencies.gobject-sys]
 git = "https://github.com/gtk-rs/sys"
