--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ features = ["v3_18"]
 [dependencies.gdk]
 git = "https://github.com/gtk-rs/gdk"
 
+[dependencies.gdk-pixbuf]
+git = "https://github.com/gtk-rs/gdk-pixbuf"
+
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 
